--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-keycloak/web": "^3.4.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.18.4",
+    "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "http-proxy-middleware": "^2.0.1",
+    "js-cookie": "^3.0.1",
+    "keycloak-js": "^16.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.3"
   },
@@ -38,5 +45,6 @@
   },
   "devDependencies": {
     "node-sass": "^7.0.1"
-  }
+  },
+  "proxy": "https://app.psengine.co.uk:7600"
 }
