--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.18.4",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
     "http-proxy-middleware": "^2.0.1",
     "js-cookie": "^3.0.1",
     "keycloak-js": "^16.1.0",
