--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-cookie": "^3.0.1",
     "keycloak-js": "^16.1.0",
     "react": "^17.0.2",
+    "react-charts": "^3.0.0-beta.34",
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
     "react-redux": "^7.2.6",
