--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-proxy-middleware": "^2.0.1",
     "js-cookie": "^3.0.1",
     "keycloak-js": "^16.1.0",
+    "query-string": "^7.1.0",
     "react": "^17.0.2",
     "react-charts": "^3.0.0-beta.34",
     "react-dom": "^17.0.2",
