--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-charts": "^3.0.0-beta.34",
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.0",
