--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # just a flag
-ENV = 'development'
+ENV = 'production'
 
 # base api
-REACT_APP_BASE_API = '/pse/api'
+REACT_APP_BASE_API = 'https://app.psengine.co.uk:7600/pse/api'
