--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "query-string": "^7.1.0",
     "react": "^17.0.2",
     "react-charts": "^3.0.0-beta.34",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
     "react-infinite-scroll-component": "^6.1.0",
@@ -61,5 +62,4 @@
     "node-sass": "^7.0.1"
   },
   "proxy": "https://app.psengine.co.uk:7600"
-  
 }
