--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
     "react-currency-format": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
-    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
