--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@react-google-maps/api": "^2.7.0",
     "@react-keycloak/web": "^3.4.0",
     "@reduxjs/toolkit": "^1.7.1",
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.24.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
